<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="theme_preferences">Theme</string>
    <string name="title_theme_preference">Holo Light</string>
    <string name="summary_theme_preference">Set the application theme</string>
    <string name="labs_preferences">Labs</string>
    <string name="title_labs_preference">Labs Title</string>
    <string name="summary_labs_preference">Power user preferences</string>
    <string name="md5_generate">Generate</string>
    <string name="md5_compare">Compare</string>
    <string name="share">Share via</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="abort">Aborted</string>
    <string name="zip">Zip</string>
    <string name="action_zip">Zip</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm_delete">Confirm Delete</string>
    <string name="action_cancel_delete">Cancel</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_up">Up One Level</string>
    <string name="action_open_bookmarks">Open Bookmarks</string>
    <string name="action_paste">Paste</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_rename">Rename</string>
    <string name="action_details">Details</string>
    <string name="action_storage_summary">Storage Summary</string>
    <string name="action_sort">Sort</string>
    <string name="action_settings">Settings</string>
	<string name="action_exit">Exit</string>
	<string name="action_ro">Mount r/o</string>
	<string name="action_rw">Mount r/w</string>
    <string name="copied_toast">Files copied</string>
    <string name="cut_toast">Files cut</string>
    <string name="rename_toast">%1$s renamed to %2$s</string>
    <string name="zip_success">Selected files(s) have been zipped to %1$s</string>
    <string name="zip_dir_empty">Zip failed. Specified folder is empty.</string>
    <string name="zip_dest_invalid">Zip file destination was invalid. Please check the destination in Menu > and try again</string>
    <string name="zip_failed">One or more selected file(s) could not be zipped. Please verify zip file name and try again</string>
    <string name="zip_in_progress">Files are being zipped. Please wait.</string>
    <string name="zip_aborted">Zip was aborted.</string>
    <string name="zip_dialog">Name for zip file</string>
    <string name="enter_zip_file_name">Enter zip file name</string>
    <string name="zip_abort_partial">Zip operation was aborted. However, one or more files were copied to %1$s</string>
    <string name="copy_aborted">Copy was aborted.</string>
    <string name="copy_abort_partial">Copy operation was aborted. However, one or more files were copied.</string>
    <string name="move_aborted">Move was aborted.</string>
    <string name="move_abort_partial">Move operation was aborted. However, one or more files were moved.</string>
    <string name="access_denied">Access Denied</string>
    <string name="cant_open_dir">%1$s is a protected directory. You will require root access on your device to open and browse this directory</string>
    <string name="goto_path_hint">Enter directory path eg. /sdcard/foo</string>
    <string name="goto_path">Navigate to</string>
    <string name="goto_path_not_exist">Sorry. The directory could not be found</string>
    <string name="file_not_exist">Sorry. The file could not be found</string>
    <string name="confirm_app_restart">Do you wish to restart app and apply new theme?</string>
    <string name="confirm_delete">Are you sure you want to delete %1$s ?</string>
    <string name="confirm_paste_text">Are you sure you want to paste %1$s ?</string>
    <string name="delete_failed">%1$s could not be deleted</string>
    <string name="rename_failed">%1$s could not be renamed</string>
    <string name="copy_failed">%1$s could not be copied</string>
    <string name="cut_failed">%1$s could not be cut</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="rename_dialog_title">Rename %1$s</string>
    <string name="properties_for">Properties: %1$s</string>
    <string name="deleting_path">Deleting files. Please wait…</string>
    <string name="copying_path">Copying files. Please wait…</string>
    <string name="moving_path">Moving files. Please wait…</string>
    <string name="create_folder">Create Folder</string>
    <string name="enter_folder_name">Enter folder name</string>
    <string name="querying_filesys">Querying File System. Please wait.</string>
    <string name="copy_complete">Copy complete.</string>
    <string name="move_complete">Resource successfully moved to new location</string>
    <string name="md5_complete">MD5 successfully generated</string>
    <string name="generic_operation_failed">Could not complete operation</string>
    <string name="cancel">Cancel</string>
    <string name="run_in_background">Run in Background</string>
    <string name="create_new_folder">Enter folder name</string>
    <string name="folder_name">Folder name</string>
    <string name="file_name">Folder name</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="really_delete">Do you really want to delete %s?</string>
    <string name="file_deleted">File(s) deleted.</string>
    <string name="folder_deleted">Folder deleted.</string>
    <string name="file_renamed">File renamed.</string>
    <string name="folder_renamed">Folder renamed.</string>
    <string name="file_moved">File moved.</string>
    <string name="folder_moved">Folder moved.</string>
    <string name="file_copied">File copied.</string>
    <string name="move_title">Select folder to move to</string>
    <string name="move_button">Move here</string>
    <string name="copy_title">Select folder to copy to</string>
    <string name="copy_button">Copy here</string>
    <string name="deleting_files">Deleting files…</string>
    <string name="error_deleting_file">Could not delete file.</string>
    <string name="error_deleting_folder">Could not delete folder \'%s\'.</string>
    <string name="error_deleting_child_file">Could not delete child file \'%s\'.</string>
    <string name="error_creating_new_folder">Could not create folder</string>
    <string name="error_generic">An error occurred: </string>
    <string name="application_not_available">No application available for this file type</string>
    <string name="copied_file_name">Copy of %s</string>
    <string name="copied_file_name_2">Copy %1$d of %2$s</string>
    <string name="permission_read_attachment_label">Read email attachments</string>
    <string name="permission_read_attachment_desc">Allows this application to read your email
        attachments.</string>
    <string name="permission_access_provider_label">Access email provider data</string>
    <string name="permission_access_provider_desc">Allows this application to access your email
        database, including received messages, sent messages, usernames, and passwords.</string>
    <string name="app_name">Holo File Explorer</string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="favorite_action">Star</string>
    <string name="done_action">Done</string>
    <string name="create_action">Create new</string>
    <string name="delete_quick_response_action">Delete</string>
    <string name="quick_responses_empty_view">No quick responses</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save draft</string>
    <string name="show_quick_text_list_dialog_action">Insert quick response</string>
    <string name="read_action">Mark read</string>
    <string name="unread_action">Mark unread</string>
    <string name="set_star_action">Add star</string>
    <string name="remove_star_action">Remove star</string>
    <string name="refresh_action">Refresh</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="account_settings_action">Account settings</string>
    <string name="settings_action">Settings</string>
    <string name="mailbox_settings_action">Sync options</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="move_action">Move</string>
    <string name="plus_cc_label">+ Cc/Bcc</string>
    <string name="add_cc_bcc_menu">Add Cc/Bcc</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="close_action">Close</string>
    <string name="message_list_send_pending_messages_action">Send all messages</string>
    <string name="choose_attachment_dialog_title">Choose attachment</string>
    <string name="move_to_folder_dialog_title">Move to</string>
    <string name="status_loading_messages">Loading messages\u2026</string>
    <string name="status_network_error">Connection problem.</string>
    <string name="error_loading_message_body">Couldn\'t load the message text. The message
        may be too large to view.</string>
    <plurals name="move_messages">
        <item quantity="one">Move message</item>
        <item quantity="other">Move messages</item>
    </plurals>
    <string name="cannot_move_protocol_not_supported_toast">ove isn\'t supported on POP3 accounts.</string>
    <string name="cannot_move_multiple_accounts_toast">Can\'t move because selection contains multiple
        accounts.</string>
    <string name="cannot_move_special_mailboxes_toast">Messages in Drafts, Outbox, and Sent can\'t be
        moved.</string>
    <plurals name="notification_new_one_account_fmt">

        
        <item quantity="one"><xliff:g id="unread_message_count" example="1">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item>

        
        <item quantity="few"><xliff:g id="unread_message_count" example="2">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item>

        
        <item quantity="other"><xliff:g id="unread_message_count" example="279">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item>
    </plurals>
    <plurals name="notification_new_multi_account_fmt">

        
        <item quantity="few">in <xliff:g id="number_accounts" example="2">%d</xliff:g> accounts</item>
        
        <item quantity="other">in <xliff:g id="number_accounts" example="10">%d</xliff:g> accounts</item>
    </plurals>
    <string name="notification_to_account">to <xliff:g id="receiver_name" example="Main">%1$s</xliff:g></string>
    <string name="notification_multiple_new_messages_fmt"><xliff:g example="2">%1$d</xliff:g> new messages</string>
    <string name="account_name_display_all">All accounts</string>
    <plurals name="number_of_accounts">
        <item quantity="one"><xliff:g id="num_accounts" example="1">%1$d</xliff:g> account</item>
        <item quantity="other"><xliff:g id="num_accounts" example="2">%1$d</xliff:g> accounts</item>
    </plurals>
    <string name="mailbox_name_server_inbox" translatable="false">Inbox</string>
    <string name="mailbox_name_server_outbox" translatable="false">Outbox</string>
    <string name="mailbox_name_server_drafts" translatable="false">Drafts</string>
    <string name="mailbox_name_server_trash" translatable="false">Trash</string>
    <string name="mailbox_name_server_sent" translatable="false">Sent</string>
    <string name="message_view_attachment_open_action">Open</string>
    <string name="message_view_attachment_load_action">Load</string>
    <string name="message_view_attachment_info_action">Info</string>
    <string name="message_view_attachment_save_action">Save</string>
    <string name="message_view_attachment_cancel_action">Stop</string>
</resources>